# visuo-haptic-shape-completion

./: LICENSE.txt  README.md
Docker/: Dockerfile  start-vnc-session.sh
Fast-Robust-ICP/: Types.h  io_pc.h
GPIS/: README.md  gpis.m  gpis_runner.m
GPIS/dependencies/TacoPig_withTortilla/: README.rst  test_socket_server.prj
GPIS/dependencies/matlab_visualization_scripts/: barwitherr_single.m~
IGR/code/datasets/: shape_completion_dataset.py  shape_completion_dataset_offline.py  shape_completion_dataset_train.py
IGR/code/model/: network.py  sample.py
IGR/code/preprocess/: grasp_train.py  preprocess_one_file.py
IGR/code/shapespace/: eval.py  latent_optimizer.py  shape_completion_setup.conf  shape_completion_setup_offline.conf  shape_completion_setup_train.conf  train.py
IGR/code/utils/: __init__.pyo  general.py  plots.py
kinova_mujoco/: CMakeLists.txt  README.md  package.xml  setup.py
kinova_mujoco/GT_meshes/: README.md
kinova_mujoco/config/: camera_config.yaml  joint_position_controllers.yaml
kinova_mujoco/launch/: moveit.rviz  moveit_rviz.launch  table_simulation_generated.launch
kinova_mujoco/meshes/: d435.STL  finger_holder.STL  robotiq_arg2f_85_inner_finger.STL  robotiq_arg2f_85_inner_knuckle.STL  robotiq_arg2f_85_outer_finger.STL  robotiq_arg2f_85_outer_knuckle.STL
kinova_mujoco/nodes/: camera_tf.py  displayObjectMarkers.py  finger_tf.py
kinova_mujoco/scripts/: prepare_object.py  run_xacro.sh
kinova_mujoco/src/: gripper_action_to_trajectory_action.cpp
kinova_mujoco/src/kinova_mujoco/: kinematics_interface.py  python_interface.py  utils.py
kinova_mujoco/urdf/: kinova_fel_shape_completion.urdf  kinova_fel_shape_completion.xacro  kinova_fel_shape_completion_NoDae.urdf  materials.xacro  object.urdf  shape_completion_scene.urdf  table.urdf  table_without_cameras.urdf
mujoco-ros/mujoco_interface_msgs/: CMakeLists.txt  package.xml
mujoco-ros/mujoco_interface_msgs/srv/: GetAllObjectPoses.srv  GetObjectPose.srv  SetObjectPoses.srv
mujoco-ros/mujoco_ros_control/: CMakeLists.txt  ReadMe.md  package.xml
mujoco-ros/mujoco_ros_control/cmake/: Findglfw3.cmake  Findmujoco.cmake
mujoco-ros/mujoco_ros_control/config/: controllers.yaml
mujoco-ros/mujoco_ros_control/include/mujoco_ros_control/: RenderImage.h  RobotHWMujoco.h
mujoco-ros/mujoco_ros_control/launch/: start_simple_robot.launch
mujoco-ros/mujoco_ros_control/model/: simple_robot.urdf
mujoco-ros/mujoco_ros_control/scripts/: camera_control.py
mujoco-ros/mujoco_ros_control/src/: RenderImage.cpp  RobotHWMujoco.cpp  mujoco_control.cpp
mujoco-ros/mujoco_ros_control/tests/: CMakeLists.txt  mujoco.cpp
point_cloud_segmentation/include/point_cloud_segmentation/: base_segmentation.h
point_cloud_segmentation/launch/: segmentation.launch
point_cloud_segmentation/src/: base_segmentation.cpp
ros_kortex/kortex_description/robots/: gen3_robotiq_2f_85.xacro
shape_completion/: CMakeLists.txt  package.xml  setup.py
shape_completion/data/exps/: example.json  simulation.json
shape_completion/launch/: moveit.rviz  real.launch  simulated.launch
shape_completion/nodes/: arrows.py  camera_publisher.py  new_pc_vis.py  rec_mesh_publisher.py
shape_completion/scripts/: do_experiments.py  main.py  run_simulation.sh
shape_completion/src/: parametrize_cartesian_path_service.cpp  smooth_pcl_service.cpp
shape_completion/src/shape_completion/: baselines.py  (+5 more)
shape_completion/srv/: parametrize_cartesian_path.srv  smooth_pcl.srv
shape_completion/urdf/: finger.urdf
(+120 files in other folders)
