<?xml version="1.0"?>
<package format="2">
    <name>kinova_mujoco</name>
    <version>0.0.1</version>
    <description>
        Package kinova_mujoco.
    </description>
    <maintainer email="jan.kristof.behrens@cvut.cz">Jan Behrens</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>kortex_description</depend>
    <depend>gen3_robotiq_2f_85_move_it_config</depend>
    <depend>mujoco_ros_control</depend>
    <depend>control_msgs</depend>
    <depend>roscpp</depend>
    <depend>actionlib</depend>

</package>
